baml_language/crates/baml_tests/snapshots/compiles/namespaces_basic/baml_tests__compiles__namespaces_basic__03_ppir.snap
---
source: crates/baml_tests/src/generated_tests.rs
assertion_line: 20488
---
=== PPIR ===
class user.Config {
  key: string
  model: string
}
class user.Config$stream {
  key: string | null
  model: string | null
}
function user.GetResponse(cfg: user.Config) -> root.llm.Response  [expr] {
  {  } root.llm.Response { text: "hello", model: cfg.model }
}
class user.llm.Response {
  text: string
  model: string
}
class user.llm.Response$stream {
  text: string | null
  model: string | null
}
function user.llm.MakeResponse(cfg: root.Config) -> user.llm.Response  [expr] {
  {  } user.llm.Response { text: "ok", model: cfg.model }
}
