baml_language/crates/baml_tests/snapshots/compiles/namespaces_basic/baml_tests__compiles__namespaces_basic__04_5_mir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== MIR2 ===
fn user.GetResponse(cfg: Config) -> llm.Response {
    // Locals:
    let _0: llm.Response // _0 // return
    let _1: Config // cfg // param
    let _2: string

    bb0: {
        _2 = copy _1.1;
        _0 = user.llm.Response { const "hello", copy _2 };
        goto -> bb1;
    }

    bb1: {
        return;
    }
}

fn user.Config.from_json(j: baml.json.json) -> Config {
    // Locals:
    let _0: Config // _0 // return
    let _1: baml.json.json // j // param
    let _2: string
    let _3: type

    bb0: {
        _2 = call const fn baml.json.stringify(copy _1) -> [bb1];
    }

    bb1: {
        _3 = load_type(Config);
        _0 = call const fn baml.json.from_string<copy _3>(copy _2) -> [bb2];
    }

    bb2: {
        return;
    }
}

fn user.Config.to_json(self: Config) -> baml.json.json {
    // Locals:
    let _0: baml.json.json // _0 // return
    let _1: Config // self // param
    let _2: string
    let _3: type

    bb0: {
        _3 = load_type(Config);
        _2 = call const fn baml.json.to_string<copy _3>(copy _1) -> [bb1];
    }

    bb1: {
        _0 = call const fn baml.json.parse(copy _2) -> [bb2];
    }

    bb2: {
        return;
    }
}

fn user.llm.MakeResponse(cfg: Config) -> llm.Response {
    // Locals:
    let _0: llm.Response // _0 // return
    let _1: Config // cfg // param
    let _2: string

    bb0: {
        _2 = copy _1.1;
        _0 = user.llm.Response { const "ok", copy _2 };
        goto -> bb1;
    }

    bb1: {
        return;
    }
}

fn user.llm.Response.from_json(j: baml.json.json) -> llm.Response {
    // Locals:
    let _0: llm.Response // _0 // return
    let _1: baml.json.json // j // param
    let _2: string
    let _3: type

    bb0: {
        _2 = call const fn baml.json.stringify(copy _1) -> [bb1];
    }

    bb1: {
        _3 = load_type(llm.Response);
        _0 = call const fn baml.json.from_string<copy _3>(copy _2) -> [bb2];
    }

    bb2: {
        return;
    }
}

fn user.llm.Response.to_json(self: llm.Response) -> baml.json.json {
    // Locals:
    let _0: baml.json.json // _0 // return
    let _1: llm.Response // self // param
    let _2: string
    let _3: type

    bb0: {
        _3 = load_type(llm.Response);
        _2 = call const fn baml.json.to_string<copy _3>(copy _1) -> [bb1];
    }

    bb1: {
        _0 = call const fn baml.json.parse(copy _2) -> [bb2];
    }

    bb2: {
        return;
    }
}
