baml_language/crates/baml_tests/snapshots/compiles/namespaces_basic/baml_tests__compiles__namespaces_basic__04_tir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== TIR2 ===
class user.Config {
  key: string
  model: string
}
function user.Config.to_json(self: user.Config) -> baml.json.json throws baml.json.JsonSerializationError | baml.json.JsonParseError {
  map { "key": self.key.to_json(), "model": self.model.to_json() } : map<string, baml.json.json>
}
function user.Config.from_json(j: baml.json.json) -> user.Config throws baml.json.JsonParseError | baml.json.JsonDecodeError {
  baml.json.from_string<T>(baml.json.stringify(j)) : user.Config
}
function user.GetResponse(cfg: user.Config) -> user.llm.Response throws never {
  { : user.llm.Response
    root.llm.Response { text: "hello", model: cfg.model } : user.llm.Response
  }
}
class user.Config$stream {
  key: null | string
  model: null | string
}
class user.llm.Response {
  text: string
  model: string
}
function user.llm.Response.to_json(self: user.llm.Response) -> baml.json.json throws baml.json.JsonSerializationError | baml.json.JsonParseError {
  map { "text": self.text.to_json(), "model": self.model.to_json() } : map<string, baml.json.json>
}
function user.llm.Response.from_json(j: baml.json.json) -> user.llm.Response throws baml.json.JsonParseError | baml.json.JsonDecodeError {
  baml.json.from_string<T>(baml.json.stringify(j)) : user.llm.Response
}
function user.llm.MakeResponse(cfg: user.Config) -> user.llm.Response throws never {
  { : user.llm.Response
    Response { text: "ok", model: cfg.model } : user.llm.Response
  }
}
class user.llm.Response$stream {
  text: null | string
  model: null | string
}
