baml_language/crates/baml_tests/snapshots/compiles/namespaces_basic/baml_tests__compiles__namespaces_basic__05_diagnostics.snap
---
source: crates/baml_tests/src/generated_tests.rs
assertion_line: 11872
---
=== COMPILER2 DIAGNOSTICS ===
No errors found.
